<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="five.seshealthpatient.Activities.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@color/whiteColor"
        />

    <TextView
        android:id="@+id/welcomeTV"
        style="@style/HeadingStyles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="162dp"
        android:text="@string/app_name"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameET"
        style="@style/LoginStyles"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/email_example_com"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordET"

        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="210dp"
        android:hint="@string/password_txt"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/reset_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/usernameET"
        android:layout_below="@+id/passwordET"
        android:layout_marginTop="-210dp"
        android:background="@null"
        android:text="@string/forgot_password_txt"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/login_btn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="94dp"
        android:text="@string/log_in_txt" />

    <Button
        android:id="@+id/create_account_btn"
        style="@style/CreateAccountStyles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/create_account_txt" />


</RelativeLayout>
